# stt-impl-artifact

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md
cduce/: .gitignore  .gitlab-ci.yml  .ocamlformat  AUTHORS  CHANGES  CONTRIBUTING.md  INSTALL.WIN32.md  INSTALL.md  LICENSE  Makefile  README.md  TODO  cduce-js.opam  cduce-js.opam.template  cduce-tools.opam  cduce-tools.opam.template  cduce-types.opam  cduce-types.opam.template  cduce.opam  cduce.opam.template  dune  dune-project  header
cduce/backend/jsoo/: cduce_jsoo_backend.ml  dune  jsoo.ml  toplevel.ml
cduce/backend/native/: cduce_curl.real.ml  cduce_expat.mli  cduce_expat.real.ml  cduce_markup.empty.ml  cduce_markup.real.ml  cduce_native_backend.ml  cduce_netclient.ml  cduce_netstring.ml  cduce_pxp.ml  cduce_pxp.mli  dune  run.ml  system.ml
cduce/benchmarks/: Makefile  addrbook.ml  addrbook1.cd  addrbook1.q  addrbook1.xsl  addrbook2.cd  addrbook2.q  addrbook2.xsl  addrbook3.cd  addrbook3.q  addrbook4.cd  bench.ml  split.ml  split0.cd  split1.cd  split1.q  split1.xsl  split2.cd  split2.q  split2.xsl  split3.cd  split3.q
cduce/doc/: Makefile
cduce/driver/: cduce_bootstrap.no_ocamliface.ml  cduce_bootstrap.ocamliface.ml  cduce_js_compat.mli  cduce_js_compat_500.ml  cduce_js_compat_600.ml  cduce_js_top.ml  dune  index.html  ocaml.prims
cduce/lang/: dune
cduce/lang/compile/: compile.ml  compile.mli  lambda.ml  lambda.mli  operators.ml  operators.mli  print_auto.ml  print_auto.mli
cduce/lang/lib/: cduce_config.ml  cduce_config.mli  cduce_driver.ml  cduce_driver.mli  cduce_error.ml  cduce_error.mli  cduce_error_typ.ml  librarian.ml  librarian.mli
cduce/lang/parser/: ast.ml  cduce_loc.ml  cduce_loc.mli  dune  parse.ml  parse.mli  parse_util.ml  parser.mly  sedlexer.ml
cduce/lang/runtime/: eval.ml  eval.mli  explain.ml  explain.mli  load_xml.ml  load_xml.mli  ocaml_obj_compat_407.ml  ocaml_obj_compat_409.ml  print_xml.ml  print_xml.mli  run_dispatch.ml  run_dispatch.mli  url.ml  url.mli  value.ml  value.mli
cduce/lang/schema/: schema_builtin.ml  schema_builtin.mli  schema_common.ml  schema_common.mli  schema_converter.ml  schema_parser.ml  schema_parser.mli  schema_types.ml  schema_types.mli  schema_utils.ml  schema_utils.mli  schema_validator.ml  schema_validator.mli  schema_xml.ml  schema_xml.mli
cduce/lang/typing/: auto_pat.mli  builtin.ml  builtin.mli  externals.ml  externals.mli  patterns.ml  patterns.mli  typed.ml  typepat.ml  typepat.mli  typer.ml  typer.mli
cduce/ocamliface/: dune  mlcompat.cpp.ml  mlstub.real.ml  mltypes.real.ml  mltypes.real.mli
cduce/tests/: README.md
cduce/tests/common/: memento.xml  site.xml  siteTypes.cd  utils.cd  xhtml-categ.cd  xhtml-strict.cd
cduce/tests/full/bad/integer_bad_div.t/: integer_bad_div.cd  run.t
cduce/tests/full/bad/integer_bad_mod.t/: integer_bad_mod.cd  run.t
cduce/tests/full/bad/no_ocamliface.t/: run.t
cduce/tests/full/bad/no_url_loader.t/: no_url_loader.cd  run.t
cduce/tests/full/bad/no_xml_plugin.t/: no_xml_plugin.cd  run.t
cduce/tests/full/good/addrbook.t/: addrbook.cd  run.t
cduce/tests/full/good/flatten.t/: flatten.cd  run.t
cduce/tests/full/good/integers.t/: integers.cd  run.t
cduce/tests/full/good/lazy.t/: lazy.cd  run.t
cduce/tests/full/good/list.t/: list.cd  run.t
cduce/tests/full/good/map_even.t/: map_even.cd  run.t
cduce/tests/full/good/namespaces.t/: people.cd  people.rdf  run.t
cduce/tests/full/good/overloading.t/: overloading.cd  run.t
cduce/tests/full/good/patricia.t/: patricia.cd  run.t
cduce/tests/full/good/poly-ok.t/: poly-ok.cd  run.t
cduce/tests/full/good/red-black.t/: red-black.cd  run.t
cduce/tests/full/good/web_site.t/: run.t  web_site.cd
cduce/tests/ocaml_ext/: dune
cduce/tests/sandbox/: dune  pretty_test.ml  sandbox.ml  test_perf.ml  test_tallying.ml
cduce/tests/tools/: dune
cduce/tests/tools/bad/cduce_mktop.t/: run.t
cduce/tests/type_printer/: dune
cduce/tests/types/good/: dune  subtyping.ml
cduce/tools/: Dockerfile  cache_ci_build.sh  cduce_mktop.ml  dtd2cduce.ml  dune  gen_docker_images.sh  gen_gitlab_ci.sh  init_opam_switch.sh  mk_win32_zip.sh  pull.ml  validate.ml
cduce/types/: IDEAS  abstractSet.ml  abstractSet.mli  atomSet.ml  atomSet.mli  bdd.ml  bdd.mli  bool.ml  bool.mli  builtin_defs.ml  builtin_defs.mli  cduce_types.ml  charSet.ml  charSet.mli  compunit.ml  compunit.mli  dune  ident.ml  ident.mli  intervals.ml  intervals.mli  iter.ml  iter.mli  normal.ml  normal.mli  positive.ml  positive.mli  print.ml  print.mli  sample.ml  sample.mli  sequence.ml  sequence.mli  subst.ml  subst.mli  tallying.ml  tallying.mli  tset.ml  types.ml  types.mli  (+2 more)
cduce/types/misc/: ansi_terminal.ml  ansi_terminal.mli  custom.ml  dune  encodings.ml  encodings.mli  html_styling.ml  html_styling.mli  imap.ml  imap.mli  ns.ml  ns.mli  pretty.ml  pretty.mli  pretty_utf8.ml  pretty_utf8.mli  sortedList.ml  sortedList.mli  stats.ml  stats.mli  styler.mli  terminal_styling.ml  terminal_styling.mli  textStyling.mli  textStyling_407.ml  textStyling_generic.ml  upool.ml  upool.mli
cduce/win32/: oss-licenses.txt
cduce/win32/LICENSES/: libcurl.LICENSE.txt  libssh2.LICENSE.txt  zlib.LICENSE.txt  zstd.LICENSE.txt
sstt/: .zenodo.json  LICENSE  Makefile  README.md  REPL.md  dune-project  sstt-bin.opam  sstt-repl.opam  sstt-repl.opam.template  sstt.opam
sstt/.github/workflows/: deploy.yml
sstt/benchmarks/: run.sh
sstt/benchmarks/config/: 01_bdt_opt_sub_opt_tall.ml.pre  02_ss_opt_sub_opt_tall.ml.pre  03_hc_opt_sub_opt_tall.ml.pre  04_ss_hc_opt_sub_opt_tall.ml.pre  05_bdt_naiv_sub_opt_tall.ml.pre  06_ss_naiv_sub_opt_tall.ml.pre  07_ss_opt_sub_naiv_tall.ml.pre  08_cduce.ml.pre
sstt/output/: Makefile  table.tex
sstt/src/doc/sstt/: dune  index.mld
sstt/src/lib/cduce/: additions.ml  additions.mli  base.ml  base.mli  dune  tvar.ml  tvar.mli  utils.ml
sstt/src/lib/repl/: dune  sstt_repl.ml
sstt/src/lib/sstt/: dune  sstt.ml
sstt/src/lib/utils/: dune  sstt_utils.ml
sstt/src/tests/: dune  tests.ml  tests.txt  tests_ext.txt
sstt/web/: .gitignore  index.html  main.js  package.json  style.css
(+138 files in other folders)
